--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,68 @@
 body {
+    font-family: Monaco;
     background-color: rgb(29,29,29);
-    color: rgb(255,255,255);
+    background-image: radial-gradient(white 1px, transparent 0);
+    background-size: 60px 60px;
+    background-position: 19px -19px;
+    color: rgb(255, 255, 255);
+}
+
+@font-face {
+    font-family: 'Monaco';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Monaco'), url('font/Monaco.woff') format('woff');
 }
 
 a {
     color: red;
+}
+
+div.topbar {
+    display: flex;
+    align-items: center;
+}
+
+div.titlebar {
+    background-color: rgba(34, 34, 34, 0.8);
+    margin-left: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.error-content {
+    background-color: rgba(34, 34, 34, 0.8);
+    text-align: center;
+}
+
+span.title {
+    color: white;
+    font-size: 35px;
+}
+
+span.subtitle {
+    color: white;
+    font-size: 15px;
+    margin-top: 5px
+}
+
+ul.navbar {
+    background-color: rgba(34, 34, 34, 0.8);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+}
+
+ul.navbar li a {
+    color: rgb(255, 255, 255);
+    display: block;
+    text-align: center;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+ul.navbar li a:hover {
+    background-color: #555;
 }
