--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ div.topbar {
 div.titlebar {
     background-color: rgba(34, 34, 34, 0.8);
     margin-left: 14px;
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
