--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,9 @@ div.topbar {
 }
 
 div.titlebar {
+    border-radius: 8px;
     background-color: rgba(34, 34, 34, 0.8);
-    margin-left: 14px;
+    margin-left: 8px;
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -49,6 +50,7 @@ span.subtitle {
 }
 
 ul.navbar {
+    border-radius: 8px;
     background-color: rgba(34, 34, 34, 0.8);
     list-style-type: none;
     margin: 0;
@@ -65,5 +67,6 @@ ul.navbar li a {
 }
 
 ul.navbar li a:hover {
+    border-radius: 8px;
     background-color: #555;
 }
